--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                         <span><i class='bx bx-map-alt' ></i></span>
                         <div class="contact_info">
                             <h3>location</h3>
-                            <p>Nangloi, Delhi 41</p>
+                            <p>Najafgarh, Delhi 41</p>
                         </div>
                     </div>
                     <div class="contact_box">
