--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="hero_wrapper__left">
                 <h1>Jr. Front-End Developer <img src="hii.png" alt=""></h1>
 
-                <p>Hi, I'm Chintu Kumar. A passionate Front-end developer based in Nangloi, Delhi 📍
+                <p>Hi, I'm Chintu Kumar. A passionate Front-end developer based in Najafgarh, Delhi 📍
                 </p>
                 <div class="social">
                     <a href="https://www.linkedin.com/in/chintu-kumar-184908225/"><i class='bx bxl-linkedin-square'></i></a>
@@ -89,7 +89,7 @@
                     <div class="text-side">
                         <h3>About me</h3>
                         <h4>A dedicated Front-end Developer 
-                            based in Nangloi, Delhi 📍
+                            based in Najafgarh, Delhi 📍
                         </h4>
                         <p>As a Junior Front-End Developer, I have create 15+ project with responsiveness. I have also done a <strong>four month internship </strong>in frontend development. I possess an impressive arsenal of skills in HTML, CSS, Bootstrap,
                             JavaScript, WordPress, Jquery and SCSS. I excel in designing and maintaining responsive
@@ -205,7 +205,7 @@
                         <span><i class='bx bx-map-alt' ></i></span>
                         <div class="contact_info">
                             <h3>location</h3>
-                            <p>Najafgarh, Delhi 41</p>
+                            <p>Najafgarh, Delhi 43</p>
                         </div>
                     </div>
                     <div class="contact_box">
